Set `enabled="true"` in the configuration file `$OPENNMS_HOME/etc/snmp-metadata-adapter-configuration.xml` to enable it.

=== Docker image changes

The Docker images for the core, minion, and sentinel have been changed from being Ubuntu-based to using RedHat's link:https://www.redhat.com/en/blog/introducing-red-hat-universal-base-image[Universal Base Image].
This move shrinks the image a bit, makes minimal updating easier, and should simplify running in restrictive OpenShift environments.

The images are based on the `ubi9-minimal` image, which is essentially a stripped down version of RHEL 9.
This means that things will have moved around a bit in the filesystem, and that you should use `microdnf` for package management.

=== Secure Credentials Vault changes
The `Secure Credentials Vault` in `OpenNMS` traditionally supported the `JCEKS` keystore format. As of the latest enhancement,
support has been added for the `PKCS12` keystore format.
Set `org.opennms.features.scv.jceks.keystore.type=PKCS12` in configuration file `$OPENNMS_HOME/etc/opennms.properties.d/scv.properties.`
If you want to convert the `PKCS12` keystore format instead of `JCEKS`, be sure to update the file extension to match the new format (e.g., use `.pk12` instead of `.jce`).

=== Important internal updates

* Our embedded Karaf container and Karaf APIs have been updated to 4.3.10
* The OpenNMS Plugin API has been updated to 1.6.0
* Zookeeper APIs have been updated to 3.7.x
* If you are performing automated tests, you may need to disable the new popup that shows on first launch.  To do so set `opennms.userDataCollection.show=false` in a properties file in `$OPENNMS_HOME/etc/opennms.properties.d/`.

=== Stricter validation of requisition names
Some characters (/, \, ?, &, *, ', “) may not be used in requisition names. The UI components have already enforced the validation of requisition names. This restriction is now also enforced when creating search requests via the OpenNMS ReST API.