@@ -52,6 +52,8 @@ The `Secure Credentials Vault` in `OpenNMS` traditionally supported the `JCEKS` 
 support has been added for the `PKCS12` keystore format.
 Set `org.opennms.features.scv.jceks.keystore.type=PKCS12` in configuration file `$OPENNMS_HOME/etc/opennms.properties.d/scv.properties.`
 If you want to convert the `PKCS12` keystore format instead of `JCEKS`, be sure to update the file extension to match the new format (e.g., use `.pk12` instead of `.jce`).
+You can convert a `JCEKS` file to `PKCS12` using the following command.
+`keytool -importkeystore -srckeystore $OPENNMS_HOME/etc/etc/scv.jce -destkeystore $OPENNMS_HOME/etc/etc/scv.pk12 -deststoretype pkcs12`.
 
 === Important internal updates
 
